# nlp-class

./: README.md  nlp-class.code-workspace  run_all.sh
haskell/: .gitignore  CHANGELOG.md  LICENSE  nlp-class-haskell.cabal
haskell/app/: Main.hs  Optimization.hs
python/: pyproject.toml
python/src/: main.py
